--- a/CTS Web App/Site.Master
+++ b/CTS Web App/Site.Master
@@ -52,7 +52,9 @@
                     <ul class="nav navbar-nav">
                         <li><a runat="server" href="~/">Home</a></li>
                         <li><a runat="server" href="~/Car">Car List</a></li>
-                        
+                       <li> <asp:LinkButton ID="LinkButton1" runat="server" 
+
+onclick="LinkButton1_Click">Sign Out</asp:LinkButton></li>
                     </ul>
                 </div>
             </div>
