--- a/CTS Web App/Views/Shared/_Layout.cshtml
+++ b/CTS Web App/Views/Shared/_Layout.cshtml
@@ -23,8 +23,22 @@
                 <ul class="nav navbar-nav">
                     <li><a runat="server" href="~/">Home</a></li>
                     <li><a runat="server" href="~/Car">Car List</a></li>
+                   
+
+
+
+
+                   
+
+
+
+
+
+                   
+
 
                 </ul>
+                @Html.Partial("_LoginPartial")
             </div>
         </div>
     </div>
